# sqlmodel_fastapi

./: .gitignore  README.md  database.py  dependencies .py  heroes.db  main.py  pyproject.toml
models/: models.py
routers/: heroes.py  missions.py  teams.py
schemas/: schemas.py
scripts/: init_test_data.py
tests/: test_heroes.py
